Fix: overflow

--- a/code/res/css/style.scss
+++ b/code/res/css/style.scss
@@ -20,6 +20,7 @@ nav {
   align-items: center;
   //height: 50px;
   padding: 4px 20px;
+  overflow: hidden;
 
   .left {
     overflow: hidden;
